--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@types/react": "^17.0.0",
+    "antd": "^4.10.2",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-redux": "7.2.2",
